k8s/manifests/frontend/frontend-service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cyberbullying-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
