k8s/manifests/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cyberbullying-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080    
  Type LoadBalancer is for EKS testing. It need to comment 'nodePort: 30080' and 'type: NodePort' while testing.
  type: LoadBalancer
